GNOME Bugzilla – Bug 739383
rtsp-client: few mikey related memory leaks
Last modified: 2014-10-30 10:44:17 UTC
Mikey memory management currently has a few memory leaks.
Created attachment 289624 [details] [review] mikey related leak fixes
Pushed, thanks! commit ef9dc6c9e4fdf1b349a76ad9f39da168a1906355 Author: Aleix Conchillo Flaqué <aleix@oblong.com> Date: Wed Oct 29 21:01:39 2014 -0700 rtsp-client: mikey memory leaks https://bugzilla.gnome.org/show_bug.cgi?id=739383