rtsp-client: mikey memory leaks

https://bugzilla.gnome.org/show_bug.cgi?id=739383