gst/rtsp-server/rtsp-client.c
@@ -1697,6 +1697,7 @@ handle_mikey_data (GstRTSPClient * client, GstRTSPContext * ctx,
     gst_caps_unref (caps);
   }
   gst_mikey_message_unref (msg);
+  gst_buffer_unref (key);
 
   return TRUE;
 
@@ -1784,7 +1785,9 @@ handle_keymgmt (GstRTSPClient * client, GstRTSPContext * ctx, gchar * keymgmt)
         handle_mikey_data (client, ctx, data, size);
       }
     }
+    g_strfreev (split);
   }
+  g_strfreev (specs);
   return TRUE;
 }
 
